[project]
name = "group4-plane-dashboard"
version = "0.1.0"
description = "ATT Group 4 - Airline Operations Dashboard"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.58.0",
    "sqlalchemy",
    "ibm-db>=3.2.9",
    "ibm-db-sa>=0.4.4",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.ruff]
line-length = 88

[tool.flake8]
max-line-length = 88
